# hagl_k210_mipi

./: CMakeLists.txt  README.md  hagl_hal_double.c  hagl_hal_single.c  hagl_hal_triple.c  mipi_display.c
include/: hagl_hal.h  hagl_hal_double.h  hagl_hal_single.h  hagl_hal_triple.h  mipi_dcs.h  mipi_display.h
